# portfolio-src

./: .gitignore  README.md  pyproject.toml  requirements.txt
afterglow/: apps.py  forms.py  models.py  urls.py  views.py
afterglow/migrations/: 0001_initial.py
afterglow/templates/afterglow/: 403.html  404.html  500.html  ag_det.html  base.html  contact.html  index.html  input_error.html  my_profile.html  result.html  sent.html
portfolio/: settings.py  urls.py
static/afterglow/css/: mystyle.css  one-page-wonder.css  one-page-wonder.min.css
test_code/: email.py
