[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.6.9"
opencv-python = "4.1.2.30"
Pillow = "7.0.0"
Django = "3.1.3"
django-environ = "^0.4.5"
django-bootstrap4 = "^2.3.1"
numpy = "1.18.5"
tensorflow = "2.3.0"
keras = "2.4.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
